Nov 27, 2003: Alex <alex_b@users.sourceforge.net>
- Changed version to 0.9.13.1

Nov 24, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- released 0.9.13

Nov 24, 2003: Jordi Mallach <jordi@sindominio.net>
- update Spanish translation

Nov 23, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- remove the static option again, would link everything static *sigh*
- update docu, use mozilla function for table of contents

Nov 22, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- link GeoIP statically when using ./configure --enable-geoip=static
- fix wrong function argument in rcon.c

Nov 19, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- allow data and localedir to be overridden via environment variables

Nov 18, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- add Call of Duty master from Activision

Nov 16, 2003: Jordi Mallach <jordi@sindominio.net>
- update Catalan translation

Nov 16, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- update german translation
- add custom arguments for FragOps UT2 mod

Nov 16, 2003: Alex <alex_b@users.sourceforge.net>
- Added Luca Camillo <kamy at tutorials.it> to the help about screen
  for submitted logos

Nov 09, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- add support for Call of Duty (wine, no official master)
- update docu
- remove useless gamespy game listings
- add note that the savage script has to be modified (needs translation)
- update german translation

Nov 06, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- update docu

Nov 01, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- add custom arguments for Death Ball UT2003 mod
- use case insensitive compare for password in ut&co

Oct 30, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- move definition of PACKAGE_DATA_DIR to Makefile.am as recommended in autoconf
  docu

Oct 29, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- additional gametypes for RTCW and ET mods. Thanks Ben Winslow for
  the patch

Oct 28, 2003: Jordi Mallach <jordi@sindominio.net>