@@ -20,6 +20,9 @@
 #include <gdk/gdkx.h>
 #include <gtk/gtk.h>
 
+#include "pixmaps.h"
+#include "loadpixmap.h"
+
 
 void iconify_window (GdkWindow *window) {
   Window xwindow;
@@ -35,4 +38,25 @@ void iconify_window (GdkWindow *window) {
   XIconifyWindow (GDK_DISPLAY (), xwindow, DefaultScreen (GDK_DISPLAY ()));
 }
 
+static const char* minimize_icon = "xqf_48x48.png";
 
+void window_set_icon (GtkWidget *win)
+{
+#ifdef USE_GTK2
+  GdkPixbuf* pixbuf;
+  pixbuf = load_pixmap_as_pixbuf(minimize_icon);
+  if(pixbuf)
+  {
+    gtk_window_set_icon (GTK_WINDOW (main_window), pixbuf);
+    gdk_pixbuf_unref (pixbuf);
+  }
+#else
+  static struct pixmap pix;
+
+  if(!load_pixmap_as_pixmap(win, minimize_icon, &pix))
+    return;
+
+  gdk_window_set_icon(win->window, NULL, pix.pix, pix.mask);
+  gdk_window_set_icon_name(win->window, "XQF");
+#endif
+}
